...
                          child: RichText(
                            text: TextSpan(
                              style: textTheme.bodyMedium,
                              children: [
                                const TextSpan(text: '¿TIENES CUENTA? '),
                                TextSpan(
                                  text: 'INICIA SESIÓN',
                                  style: TextStyle(
                                    color: context.colors.primary,
                                    fontWeight: FontWeight.w900,
                                    letterSpacing: 1,
                                  ),
                                ),
...
